# autodrive

./: .gitignore  CLAUDE.md  README.md  TRAINING_IMPROVEMENTS.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
.ai/: concept.md
.cursor/plans/: 2d-driving-game-b7df9201.plan.md
.cursor/rules/: shared.mdc
.github/workflows/: autopilot-experiments.yml  ci.yml
autopilot/: .gitignore  README.md  check_data.py  pyproject.toml
autopilot/models/: best_model.pt  final_model.pt
autopilot/models/model-deeper-network/: final_model.pt
autopilot/src/autopilot/: __init__.py  augmentation.py  data_loader.py  dataset.py  inference.py  model.py  server.py  train.py  wandb_logger.py
autopilot/wandb/: latest-run
autopilot/wandb/run-20251025_221334-8jpum96a/: run-8jpum96a.wandb
autopilot/wandb/run-20251025_221334-8jpum96a/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
autopilot/wandb/run-20251025_222220-y8vb9x9w/: run-y8vb9x9w.wandb
autopilot/wandb/run-20251025_222220-y8vb9x9w/files/: config.yaml  wandb-metadata.json  wandb-summary.json
game/: config.js  main.js  tracks.json
game/entities/: Car.js  Track.js
game/scenes/: GameScene.js
game/tracks/: track1.json  track2.json  track3.json
game/utils/: Radar.js  TrackManager.js
server/: index.js  telemetry-balance.js
server/telemetry/: telemetry_2025-10-24T19-02-13-027Z.json  telemetry_2025-10-24T19-21-47-792Z.json  telemetry_2025-10-24T19-21-50-941Z.json  (+69 more)
src/: App.tsx
tracks/: first-route.json  test-points.json
(+33 files in other folders)
